Fix button styling on iOS

--- a/src/frontend/scss/_buttons.scss
+++ b/src/frontend/scss/_buttons.scss
@@ -1,4 +1,5 @@
 .btn {
+  appearance: none;
   border: 0;
   color: white;
   font-size: 16px;
